v.1.8.0
- updated for Helix
- fixed crash at exist when artist images have unicode characters in name

v.1.7.0
- added support for htbackdrops.org MusicBrainz ID search (falls back to old search method)
- fixed crash when merging artist images where image has unicode character in name
- fixed parsing error due to new JSON format from MusicBrainz
- fixed error where window properties were not set properly at script exit

v.1.6.9
- added option to download artist thumbnails from htbackdrops and fanart.tv
- update to current requests module (requests2 depreciated)
- updated to v3 of fanart.tv API (including option to use client API key)

v.1.6.8
- fix for crash when using smb path
- cleaned up startup process to better deal with script being started twice
- added new window property Artistslideshow.ArtworkReady (true if artwork available)

v.1.6.7
- fix for required xbmc python version

v.1.6.6
- suppress all logging by default with option to turn debug logging on
- added option to use transparent image if no artwork found
- added skin property so skins can tell if transparency option has been set
- updated language files

v.1.6.5
- fixed crash during version migration process related to UTF8 characters
- fixed crash when using cache manager to trim size of image cache

v.1.6.4
- added full support for remote file systems without mapping drive in OS
- fix for crash with access violation in random situations
- fix for duplicate ArtistSlideshow folder showing up on Linux
- fix for crash when attempting to delete temp file
- fix for constant download of images
- fix for exclusions file being ignored

v.1.6.3
- fixed AS not showing images when merging multiple artists' images
- fixed AS not requesting correct language for bio from Last.FM
- changes to get more consistent results from external sites
- fixed crash when viewing artists with extended characters in their name
- fixed bad searches with artists with extended characters in their name