@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<<<<<<< HEAD
 <addon id="script.artistslideshow" name="Artist Slideshow" version="1.8.0" provider-name="pkscout|ronie">
+=======
+<addon id="script.artistslideshow" name="Artist Slideshow" version="1.7.0" provider-name="pkscout|ronie">
+>>>>>>> parent of febd3ee... fix for unicode in image names
 	<requires>
 		<import addon="xbmc.python" version="2.19.0"/>
 		<import addon="xbmc.addon" version="13.0.0"/>
