@@ -155,7 +155,7 @@ class Main:
             old_files = []
         for old_file in old_files:
             if not old_file.endswith( '.nfo' ):
-                success, loglines = deleteFile( os.path.join(dir_path, smartUTF8(old_file).decode('utf-8')) )
+                success, loglines = deleteFile( os.path.join(dir_path, old_file) )
 
 
     def _clean_text( self, text ):
