@@ -1,7 +1,10 @@
+<<<<<<< HEAD
 v.1.8.0
 - updated for Helix
 - fixed crash at exist when artist images have unicode characters in name
 
+=======
+>>>>>>> parent of febd3ee... fix for unicode in image names
 v.1.7.0
 - added support for htbackdrops.org MusicBrainz ID search (falls back to old search method)
 - fixed crash when merging artist images where image has unicode character in name
